add new input ui, add login, form ui + custom caret

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "Страница не найдена": "Страница не найдена",
   "Короткий язык": "Ru",
   "О сайте": "О сайте",
-  "Главная ": "Главная "
+  "Главная ": "Главная ",
+  "Введите username": "Введите username"
 }
