--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "Страница не найдена": "Page not found",
   "Короткий язык": "En",
   "О сайте": "About us",
-  "Главная": "Main"
+  "Главная": "Main",
+  "Введите username": "Введите username"
 }
