add global api instance, fetch profile data (async)

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,6 @@
   "Введите username": "Введите username",
   "Форма авторизации": "Форма авторизации",
   "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-  "Выйти": "Выйти"
+  "Выйти": "Выйти",
+  "PROFILE PAGE": "Страницы профиля"
 }
