add entity Comment, create normalize data func

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,15 +1,41 @@
 {
-  "Тестовый пример": "Test example",
-  "Перевод": "Translate",
-  "Главная страница": "Main page",
-  "Язык": "English",
-  "Страница не найдена": "Page not found",
-  "Короткий язык": "En",
-  "О сайте": "About us",
-  "Главная": "Main",
-  "Введите username": "Введите username",
-  "Форма авторизации": "Форма авторизации",
-  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-  "Выйти": "Выйти",
-  "PROFILE PAGE": "Страницы профиля"
+	"Тестовый пример": "Test example",
+	"Перевод": "Translate",
+	"Главная страница": "Main page",
+	"Язык": "English",
+	"Страница не найдена": "Page not found",
+	"Короткий язык": "En",
+	"О сайте": "About us",
+	"Главная": "Main",
+	"Введите username": "Enter username",
+	"Форма авторизации": "Login form",
+	"Вы ввели неверный логин или пароль": "You entered an incorrect username or password",
+	"Выйти": "Log out",
+	"PROFILE PAGE": "Profile page",
+	"Войти": "Log in",
+	"Произошла непредвиденная ошибка": "An unexpected error occurred",
+	"Обновить страницу": "Reload page",
+	"Введите пароль": "Enter password",
+	"Профиль": "Profile",
+	"Редактировать": "Edit",
+	"Отменить": "Cancel",
+	"Сохранить": "Save",
+	"Серверная ошибка при сохранении": "Server error while saving",
+	"Некорректный возраст": "Invalid age",
+	"Некорректный регион": "Invalid region",
+	"Имя и фамилия обязательны": "First and last name are required",
+	"Данные не указаны": "No data provided",
+	"Произошла ошибка при загрузке профиля": "An error occurred while loading the profile",
+	"Попробуйте обновить страницу": "Try reloading the page",
+	"Ваше имя": "Your first name",
+	"Ваше фамилия": "Your last name",
+	"Ваш возраст": "Your age",
+	"Город": "City",
+	"Имя пользователя": "Username",
+	"Введите ссылку на аватар": "Enter avatar URL",
+	"Укажите валюту": "Select currency",
+	"Укажите страну": "Select country",
+	"increment": "increment",
+	"decrement": "decrement",
+	"throw error": "throw error"
 }
