--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,14 +1,40 @@
 {
-  "Тестовый пример": "Тестовый пример",
-  "Перевод": "Перевод",
-  "Главная страница": "Главная страница",
-  "Язык": "Русский",
-  "Страница не найдена": "Страница не найдена",
-  "Короткий язык": "Ru",
-  "О сайте": "О сайте",
-  "Главная ": "Главная ",
-  "Введите username": "Введите username",
-  "Форма авторизации": "Форма авторизации",
-  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-  "Выйти": "Выйти"
+	"Тестовый пример": "Тестовый пример",
+	"Перевод": "Перевод",
+	"Главная страница": "Главная страница",
+	"Язык": "Русский",
+	"Страница не найдена": "Страница не найдена",
+	"Короткий язык": "Ru",
+	"О сайте": "О сайте",
+	"Главная ": "Главная ",
+	"Введите username": "Введите username",
+	"Форма авторизации": "Форма авторизации",
+	"Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+	"Выйти": "Выйти",
+	"Войти": "Войти",
+	"Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+	"Обновить страницу": "Обновить страницу",
+	"Введите пароль": "Введите пароль",
+	"Профиль": "Профиль",
+	"Редактировать": "Редактировать",
+	"Отменить": "Отменить",
+	"Сохранить": "Сохранить",
+	"Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
+	"Некорректный возраст": "Некорректный возраст",
+	"Некорректный регион": "Некорректный регион",
+	"Имя и фамилия обязательны": "Имя и фамилия обязательны",
+	"Данные не указаны": "Данные не указаны",
+	"Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+	"Попробуйте обновить страницу": "Попробуйте обновить страницу",
+	"Ваше имя": "Ваше имя",
+	"Ваше фамилия": "Ваше фамилия",
+	"Ваш возраст": "Ваш возраст",
+	"Город": "Город",
+	"Имя пользователя": "Имя пользователя",
+	"Введите ссылку на аватар": "Введите ссылку на аватар",
+	"Укажите валюту": "Укажите валюту",
+	"Укажите страну": "Укажите страну",
+	"increment": "increment",
+	"decrement": "decrement",
+	"throw error": "throw error"
 }
