--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -6,6 +6,32 @@
 		"tagline": "Платформа для торговли",
 		"latency": "Задержка",
 		"throughput": "Поток",
-		"locale": "Язык"
+		"locale": "Язык",
+		"login": "Войти"
+	},
+	"auth": {
+		"login": "Войти",
+		"loginSubtitle": "Введите учетные данные для продолжения",
+		"username": "Имя пользователя",
+		"password": "Пароль",
+		"fillAll": "Пожалуйста, заполните все поля",
+		"invalidCredentials": "Неверное имя пользователя или пароль",
+		"error": "Ошибка входа. Попробуйте еще раз.",
+		"loading": "Загрузка...",
+		"tagline": "Торговая платформа",
+		"demoHint": "Демо-учетные данные: admin/123 или user/123"
+	},
+	"profile": {
+		"notAuthorized": "Не авторизован",
+		"memberSince": "Участник с 2024",
+		"logout": "Выйти",
+		"personalInfo": "Личная информация",
+		"email": "Email",
+		"phone": "Телефон",
+		"bio": "О себе",
+		"save": "Сохранить изменения",
+		"totalTrades": "Всего сделок",
+		"totalPnl": "Общий P&L",
+		"winRate": "Процент побед"
 	}
 }
