--- a/public/locales/ru/settings.json
+++ b/public/locales/ru/settings.json
@@ -1,5 +1,40 @@
 {
-	"appearance": "Оформление",
-	"watchlist": "Список наблюдения",
-	"pwa": "PWA и уведомления"
+	"title": "Настройки",
+	"subtitle": "Настройте свой торговый опыт",
+	"appearance": {
+		"title": "Внешний вид и язык",
+		"description": "Настройте тему и язык",
+		"theme": "Тема",
+		"language": "Язык",
+		"defaultRoute": "Начальный маршрут"
+	},
+	"watchlist": {
+		"title": "Список наблюдения",
+		"description": "Управляйте символами для мониторинга в реальном времени",
+		"empty": "Нет символов в списке наблюдения",
+		"placeholder": "Введите символ (например, AAPL)",
+		"add": "Добавить"
+	},
+	"alerts": {
+		"title": "Ценовые уведомления",
+		"description": "Настройте уведомления о ценах для ваших символов",
+		"empty": "Нет настроенных уведомлений",
+		"symbolPlaceholder": "Символ",
+		"pricePlaceholder": "Цена",
+		"direction": "Направление",
+		"add": "Добавить уведомление"
+	},
+	"pwa": {
+		"title": "PWA и уведомления",
+		"description": "Настройте офлайн режим и push уведомления",
+		"offline": "Офлайн режим",
+		"offlineDescription": "Включите service worker для офлайн функциональности",
+		"enableOffline": "Включить",
+		"pushNotifications": "Push уведомления",
+		"pushDescription": "Получайте уведомления браузера для алертов",
+		"enable": "Включить",
+		"disable": "Отключить",
+		"queuedOrders": "{{count}} ордер(ов) в очереди на синхронизацию",
+		"sync": "Синхронизировать сейчас"
+	}
 }
